# shopflow

./: README.md  docker-compose.yml
.github/workflows/: auth-service-ci.yml  inventory-service-ci.yml  payment-service-ci.yml  sales-service-ci.yml
docs/: PHASES.md
infra/docker/postgres-init/: 01-create-databases.sql
scripts/: check_ambiguous_names.py  check_unused_imports.py
services/auth-service/: .env.example  Dockerfile  pyproject.toml
services/auth-service/alembic/: env.py
services/auth-service/alembic/versions/: 0001_initial_schema.py
services/auth-service/app/: main.py
services/auth-service/app/api/v1/: auth_routes.py  health_routes.py
services/auth-service/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
services/auth-service/app/domain/: base.py  models.py
services/auth-service/app/repositories/: token_repository.py  user_repository.py
services/auth-service/app/schemas/: auth.py
services/auth-service/app/services/: auth_service.py
services/auth-service/tests/: conftest.py  test_auth_api.py  test_auth_service.py
services/inventory-service/: .env.example  Dockerfile  pyproject.toml
services/inventory-service/alembic/: env.py
services/inventory-service/alembic/versions/: 0001_initial_schema.py
services/inventory-service/app/: main.py
services/inventory-service/app/api/v1/: category_routes.py  health_routes.py  location_routes.py  product_routes.py  stock_routes.py  supplier_routes.py
services/inventory-service/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
services/inventory-service/app/domain/: base.py  models.py
services/inventory-service/app/repositories/: category_repository.py  location_repository.py  product_repository.py  stock_repository.py  supplier_repository.py
services/inventory-service/app/schemas/: catalog.py  product.py  stock.py
services/inventory-service/app/services/: category_service.py  location_service.py  product_service.py  stock_service.py  supplier_service.py
services/inventory-service/tests/: conftest.py  test_inventory_api.py  test_product_service.py  test_stock_service.py
services/payment-service/: .env.example  Dockerfile  pyproject.toml
services/payment-service/alembic/versions/: 0001_initial_schema.py
services/payment-service/app/: main.py
services/payment-service/app/api/v1/: health_routes.py  payment_routes.py  webhook_routes.py
services/payment-service/app/core/: config.py  database.py  dependencies.py  logging.py  security.py
services/payment-service/app/domain/: base.py  models.py
services/payment-service/app/providers/: base.py  flutterwave.py  monnify.py  paystack.py
services/payment-service/app/repositories/: payment_repository.py
services/payment-service/app/schemas/: payment.py
services/payment-service/app/services/: payment_service.py
services/payment-service/tests/: conftest.py  fakes.py  test_payment_api.py  test_payment_service.py
services/sales-service/: .env.example  Dockerfile  pyproject.toml
services/sales-service/alembic/versions/: 0001_initial_schema.py
services/sales-service/app/: main.py
services/sales-service/app/api/v1/: health_routes.py  sale_routes.py
services/sales-service/app/core/: config.py  database.py  dependencies.py  inventory_client.py  logging.py  security.py
services/sales-service/app/domain/: base.py  models.py
services/sales-service/app/repositories/: sale_repository.py
services/sales-service/app/schemas/: sale.py
services/sales-service/app/services/: sale_service.py
services/sales-service/tests/: conftest.py  fakes.py  test_sale_service.py  test_sales_api.py
