[project]
name = "shopflow-auth-service"
version = "0.1.0"
description = "ShopFlow authentication & RBAC service"
requires-python = ">=3.11"
dependencies = [
    "shopflow-database",
    "shopflow-configuration",
    "shopflow-constants",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "passlib[bcrypt]>=1.7",
    "redis>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# auth-service ships an `app/` package alongside an `alembic/` migrations
# directory and a `tests/` directory at the project root. Without an
# explicit include/exclude, setuptools' flat-layout auto-discovery treats
# every top-level directory as a candidate package, which fails with:
#   "Multiple top-level packages discovered in a flat-layout: ['app', 'alembic']"
# Restricting discovery to `app*` fixes this — alembic and tests are not
# installable packages, they're run in place (alembic via `alembic upgrade`,
# tests via `pytest`), so they should never be part of the wheel/egg-link.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
