[project]
name = "shopflow-inventory-service"
version = "0.1.0"
description = "ShopFlow inventory, stock ledger, and catalog service"
requires-python = ">=3.11"
dependencies = [
    "shopflow-database",
    "shopflow-configuration",
    "shopflow-constants",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# Same fix as auth-service: without this, setuptools' flat-layout
# discovery sees both `app/` and `alembic/` as top-level package
# candidates and refuses to install. See auth-service/pyproject.toml
# for the full explanation.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
