[project]
name = "shopflow-payment-service"
version = "0.1.0"
description = "ShopFlow payment provider adapters (Paystack, Flutterwave, Monnify)"
requires-python = ">=3.11"
dependencies = [
    "shopflow-database",
    "shopflow-configuration",
    "shopflow-constants",
    "shopflow-auth",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "pydantic[email]>=2.6",
    "pydantic-settings>=2.2",
    "python-jose[cryptography]>=3.3",
    "httpx>=0.27",
    "redis>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "aiosqlite>=0.20",
    "ruff>=0.4",
    "mypy>=1.9",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# See services/auth-service/pyproject.toml's comment on this exact same
# fix — flat-layout auto-discovery can't tell alembic/ and tests/ apart
# from the actual installable package without this. Applied here from
# the start rather than waiting to rediscover the same CI failure again.
[tool.setuptools.packages.find]
include = ["app*"]
exclude = ["alembic*", "tests*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
